# read_bin_cli

./: .gitignore  README.md  README_ZH.md  TODO.md  _patch_debug.py  read_bin-termux.py  read_bin.py  read_bin.py.orig  read_bin.rb  read_bin_new.py  read_bin_termux.py  read_bin_win.py  ses_xaml.json  session-ses_137e.md  utf8.rb
.github/workflows/: release.yml
.mimocode/plans/: 1781201759161-neon-garden.md  1781355608768-shiny-circuit.md
docs/usage/: game.md
rust/: CHANGELOG.md  CODE_NAV.md  Cargo.toml  about.txt  build.rs  help.txt
rust-min/: Cargo.toml  old_color.yaml
rust-min/src/: app.rs  color_config.rs  main.rs  search.rs  utf8.rs
rust-new/: Cargo.toml  color.yaml
rust-new/rust-min/src/: app.rs
rust-new/src/: app.rs  color_config.rs  main.rs  search.rs
rust-old/: Cargo.toml
rust-old/src/: main.rs  utf8.rs
rust/macros/: Cargo.toml  README.md
rust/macros/src/: codegen.rs  lib.rs  parser.rs
rust/rust-min/: Cargo.toml
rust/rust-min/src/: main.rs  search.rs
rust/src/: app.rs  bitmap.rs  color_config.rs  display.rs  main.rs  modified.rs  search.rs  utf8.rs
rust/ui/: app.tui  statusbar.tui
rust/ui/components/: file-browser.tui  help-popup.tui  hex-view.tui  mode-dropdown.tui  save-dialog.tui  status-bar.tui  top-bar.tui
