[package]
name = "read-bin"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = "0.28"
memmap2 = "0.9"
regex-lite = "0.1"

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
codegen-units = 1
