[package]
name = "read-bin"
version = "0.1.10"
authors = ["Saisui"]
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
memmap2 = "0.9"

[target.'cfg(not(target_os = "android"))'.dependencies]
arboard = "3"

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
codegen-units = 1
