[package]
name = "read-bin"
version = "0.1.11"
authors = ["Saisui"]
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
memmap2 = "0.9"
libc = "0.2"

[target.'cfg(not(target_os = "android"))'.dependencies]
arboard = "3"

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
inotify = "0.10"

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
codegen-units = 1
